--- a/cw1/server/package.json
+++ b/cw1/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonrepair": "^3.12.0",
     "mermaid": "^11.6.0"
   }
 }
